--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,14 @@ notebook
 numpy
 scikit-learn
 matplotlib
-python-box==6.0.2
-pyYAML
+python-box[all]~=7.0
+pyYAML~=6.0.1
 tqdm
 ensure==1.0.2
-joblib
+joblib~=1.3.2
 types-PyYAML
 Flask
 Flask-Cors
 -e .
+
+setuptools~=60.2.0
