--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -84,7 +84,7 @@ jobs:
       
       - name: Pull latest images
         run: |
-         docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+         docker pull 645499532699.dkr.ecr.ap-southeast-2.amazonaws.com/mlproj:latest
          
       # - name: Stop and remove container if running
       #   run: |
